--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
 </head>
 <body class="bg-background-light dark:bg-background-dark text-slate-800 dark:text-slate-100 min-h-screen transition-colors duration-200">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
